# Source.Python

./: .gitattributes  .gitignore  .pylintrc  checker.bat  readme.md  readme.txt
addons/: source-python.vdf
src/: Build.bat  Build.sh  Build.sh~  CMakeLists.txt  NewBuild.bat  NewBuild.sh  SDK.bat  SDK.sh  configure-csgo - Kopie.bat  configure-csgo-debug.sh  configure-csgo-release.sh  configure-csgo.bat  configure-ob-debug.sh  configure-ob-release.sh  configure-ob.bat
src/core/: export_main.cpp  export_main.h  sp_gamedir.cpp  sp_gamedir.h  sp_hooks.cpp  sp_hooks.h  sp_main.cpp  sp_main.h  sp_python.cpp  sp_python.h
src/core/addons/: sp_addon.cpp  sp_addon.h
src/core/core/: sp_gamedir.cpp  sp_main.cpp  sp_main.h  sp_python.cpp
src/core/modules/: export_main.cpp  export_main.h
src/core/modules/basetypes/: basetypes_wrap.h  basetypes_wrap_python.cpp
src/core/modules/bitbuffers/: bitbuffers.h  bitbuffers_wrap.cpp  bitbuffers_wrap.h  bitbuffers_wrap_python.cpp
src/core/modules/bot/: bot_wrap_python.cpp
src/core/modules/bots/: bots_wrap_python.cpp
src/core/modules/colors/: colors.h  colors_wrap.cpp  colors_wrap.h  colors_wrap_python.cpp
src/core/modules/command/: client_command_wrap.cpp  client_command_wrap.h  command_wrap_python.cpp  say_command_wrap.cpp  say_command_wrap.h
src/core/modules/commands/: client_command_wrap.cpp  client_command_wrap.h  client_commands_wrap.cpp  client_commands_wrap.h  client_commands_wrap_python.cpp  command_wrap.cpp  command_wrap.h  command_wrap_python.cpp  commands.h  commands_client.cpp  commands_client.h  commands_client_wrap.cpp  commands_client_wrap.h  commands_client_wrap_python.cpp  commands_say.cpp  commands_say.h  commands_say_wrap.cpp  commands_say_wrap.h  commands_say_wrap_python.cpp  commands_server.cpp  commands_server.h  commands_server_wrap.cpp  commands_server_wrap.h  commands_server_wrap_python.cpp  commands_wrap.cpp  commands_wrap.h  commands_wrap_python.cpp  say_command_wrap.cpp  say_command_wrap.h  say_commands_wrap.cpp  say_commands_wrap.h  say_commands_wrap_python.cpp  server_command_wrap.cpp  server_command_wrap.h  server_commands_wrap.cpp  server_commands_wrap.h  server_commands_wrap_python.cpp
src/core/modules/constants/: constants_const_wrap.h  constants_const_wrap_python.h  constants_in_buttons_wrap.h  constants_in_buttons_wrap_python.h  constants_wrap_python.cpp
src/core/modules/conversions/: conversions_wrap.h  conversions_wrap_python.cpp
src/core/modules/core/: core.cpp  core.h  core_cache.cpp  core_cache.h  core_cache_wrap.cpp  core_wrap.cpp  core_wrap_python.cpp
src/core/modules/cvar/: cvar_wrap.cpp  cvar_wrap.h  cvar_wrap_python.cpp
src/core/modules/cvars/: cvars.cpp  cvars.h  cvars_wrap.cpp  cvars_wrap.h  cvars_wrap_python.cpp
src/core/modules/datamap/: datamap_wrap.h  datamap_wrap_python.cpp
src/core/modules/datamaps/: datamaps_wrap.h  datamaps_wrap_python.cpp
src/core/modules/dump/: dump_functions.h  dump_wrap_python.cpp
src/core/modules/effects/: effects.h  effects_base.h  effects_base_wrap.cpp  effects_constants_wrap.cpp  effects_wrap.cpp  effects_wrap.h  effects_wrap_python.cpp
src/core/modules/engine/: eiface_engine_base.cpp  eiface_engine_base.h  eiface_wrap.cpp  eiface_wrap.h  eiface_wrap_python.cpp  engine_wrap_python.cpp
src/core/modules/engines/: engines.h  engines_gamerules.cpp  engines_gamerules.h  engines_gamerules_wrap.cpp  engines_server.cpp  engines_server.h  engines_server_wrap.cpp  engines_sound_wrap.cpp  engines_tools_wrap.cpp  engines_trace_wrap.cpp  engines_wrap.cpp  engines_wrap.h  engines_wrap_python.cpp
src/core/modules/entities/: datamaps_wrap.h  datamaps_wrap_python.cpp  entities.cpp  entities.h  entities_collisions.cpp  entities_collisions.h  entities_collisions_wrap.cpp  entities_constants_wrap.cpp  entities_constants_wrap_python.cpp  entities_datamaps.cpp  entities_datamaps.h  entities_datamaps_wrap.cpp  entities_datamaps_wrap.h  entities_datamaps_wrap_python.cpp  entities_entity.cpp  entities_entity.h  entities_entity_wrap.cpp  entities_entity_wrap.h  entities_entity_wrap_python.cpp  entities_factories.cpp  entities_factories.h  entities_factories_wrap.cpp  entities_factories_wrap.h  entities_factories_wrap_python.cpp  entities_generator.cpp  entities_generator.h  entities_generator_wrap.cpp  entities_generator_wrap.h  entities_helpers.h  entities_helpers_wrap.cpp  entities_helpers_wrap.h  entities_helpers_wrap_python.cpp  entities_props.cpp  entities_props.h  entities_props_wrap.cpp  entities_props_wrap.h  entities_props_wrap_python.cpp  entities_transmit.cpp  entities_transmit.h  entities_transmit_wrap.cpp  (+3 more)
src/core/modules/entity/: entity_generator_wrap.cpp  entity_props.cpp  entity_wrap.cpp  entity_wrap.h  entity_wrap_python.cpp
src/core/modules/event/: event_wrap_python.cpp
src/core/modules/events/: events.h  events_generator.cpp  events_generator.h  events_wrap.cpp  events_wrap.h  events_wrap_python.cpp
src/core/patches/: undefined_symbols.cpp
src/core/utilities/: array.h  baseentity.h  baseplayer.h  call_python.h  convar.h  conversions.cpp  conversions.h  ipythongenerator.h  shared_utils.h  sp_util.h  wrap_macros.h
src/core/utility/: call_python.h  conversions.h  ipythongenerator.h  mrecipientfilter.cpp  mrecipientfilter_wrap.cpp  mrecipientfilter_wrap.h  mrecipientfilter_wrap_python.cpp  shared_utils.h  sp_util.h  wrap_macros.h
src/hl2sdk/: readme.md  readme.txt
src/loader/: definitions.h  loader_main.cpp  loader_main.h  updater.cpp  updater.h
src/makefiles/: shared.cmake
src/makefiles/branch/: blade.cmake  bms.cmake  csgo.cmake  css.cmake  dods.cmake  gmod.cmake  hl2dm.cmake  insurgency.cmake  l4d2.cmake  sdk2013.cmake  tf2.cmake
src/makefiles/game/: csgo.cmake
src/makefiles/linux/: linux.base.cmake
src/makefiles/sdk/: csgo.cmake  ob-valve.cmake
src/makefiles/win32/: win32.base.cmake
src/sdks/: readme.txt
src/sdks/hl2sdk-csgo/: .hg_archival.txt
src/sdks/hl2sdk-ob-valve/: .hg_archival.txt  Everything_SDK-2005.sln  Game_Episodic-2005.sln  Game_HL2-2005.sln  Game_HL2MP-2005.sln  Game_Scratch-2005.sln  notes.txt
(+4225 files in other folders)
